// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserCommentsList Component renders the UI as expected 1`] = `
<body>
  <div>
    <section
      class="UserCommentsList"
    >
      <header>
        <h2>
          Comments
        </h2>
      </header>
      <ul>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/4"
          >
            Cooking Basics for Beginners
          </a>
          <p
            class="Comment__content"
          >
            I wish I knew these when I started learning to cook!
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Jan 05 2021 08:28:28
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/1"
          >
            Lessons I Learned from Cooking
          </a>
          <p
            class="Comment__content"
          >
            Comment14
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Jan 05 2021 06:07:08
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/1"
          >
            Lessons I Learned from Cooking
          </a>
          <p
            class="Comment__content"
          >
            Comment15
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Jan 03 2021 20:21:22
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/1"
          >
            Lessons I Learned from Cooking
          </a>
          <p
            class="Comment__content"
          >
            Comment13
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Jan 02 2021 13:14:15
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/1"
          >
            Lessons I Learned from Cooking
          </a>
          <p
            class="Comment__content"
          >
            Comment12
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Jan 01 2021 12:13:14
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/7"
          >
            Title7
          </a>
          <p
            class="Comment__content"
          >
            What an insightful post
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Jan 01 2021 10:31:39
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/2"
          >
            How to Save Money When Cooking
          </a>
          <p
            class="Comment__content"
          >
            Great advice!  This'll help me save so much money feeding my three teenagers!
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Dec 31 2020 09:24:43
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/1"
          >
            Lessons I Learned from Cooking
          </a>
          <p
            class="Comment__content"
          >
            It's amazing what you can learn from cooking
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Dec 20 2020 10:43:16
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/1"
          >
            Lessons I Learned from Cooking
          </a>
          <p
            class="Comment__content"
          >
            Comment10
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Dec 19 2020 15:22:16
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/1"
          >
            Lessons I Learned from Cooking
          </a>
          <p
            class="Comment__content"
          >
            I know, right?
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Dec 19 2020 08:37:16
          </p>
        </li>
      </ul>
      <button
        class="page-button prev"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <button
        class="page-button next"
        type="button"
      >
        Next
      </button>
    </section>
  </div>
</body>
`;

exports[`UserCommentsList Component switches to the next group of comments after clicking 'Next' 1`] = `
<body>
  <div>
    <section
      class="UserCommentsList"
    >
      <header>
        <h2>
          Comments
        </h2>
      </header>
      <ul>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/1"
          >
            Lessons I Learned from Cooking
          </a>
          <p
            class="Comment__content"
          >
            These are all great lessons!
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Dec 19 2020 07:37:16
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/1"
          >
            Lessons I Learned from Cooking
          </a>
          <p
            class="Comment__content"
          >
            Huh, I never thought about it this way
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Dec 17 2020 20:12:16
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/5"
          >
            Winter Seasoning Guide
          </a>
          <p
            class="Comment__content"
          >
            I can't wait to try these seasoning combinations in my next meal!
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Dec 17 2020 08:37:52
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/1"
          >
            Lessons I Learned from Cooking
          </a>
          <p
            class="Comment__content"
          >
            Comment11
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Dec 15 2020 17:18:19
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__post-title"
            href="/blog-posts/1"
          >
            Lessons I Learned from Cooking
          </a>
          <p
            class="Comment__content"
          >
            Comment9
          </p>
          <p
            class="Comment__timestamp"
          >
            Last edited: 
            Dec 12 2020 07:07:07
          </p>
        </li>
      </ul>
      <button
        class="page-button prev"
        type="button"
      >
        Previous
      </button>
      <button
        class="page-button next"
        disabled=""
        type="button"
      >
        Next
      </button>
    </section>
  </div>
</body>
`;
